add entitymanager, change some code to fit with that instead, change one test to incorporate em, add mappertest class